--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,6 +7,8 @@ on:
 
 permissions:
   contents: write
+  packages: write
+
 
 jobs:
   release:
@@ -19,6 +21,11 @@ jobs:
       - uses: actions/setup-go@v4.0.0
         with:
           go-version: '1.20'
+      - uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       - uses: goreleaser/goreleaser-action@v4
         with:
           distribution: goreleaser
