--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -29,11 +29,9 @@ builds:
       - noasm
 archives:
   - name_template: >-
-      {{ .ProjectName }}_
-      {{- title .Os }}_
-      {{- if eq .Arch "amd64" }}x86_64
-      {{- else if eq .Arch "386" }}i386
-      {{- else }}{{ .Arch }}{{ end }}
+      {{ .ProjectName }}-
+      {{- .Os }}-
+      {{- .Arch }}
 dockers:
   - image_templates:
       - "ghcr.io/planetlabs/gpq:{{ .Tag }}"
