--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5.0.1
         with:
-          go-version: '1.21'
+          go-version: '1.22'
       - uses: golangci/golangci-lint-action@v6
         with:
           version: v1.54.1
@@ -27,7 +27,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5.0.1
         with:
-          go-version: '1.21'
+          go-version: '1.22'
       - run: go test -v ./...
 
   wasm:
@@ -38,7 +38,7 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v5.0.1
         with:
-          go-version: '1.21'
+          go-version: '1.22'
       - name: Build WASM
         run: make wasm
 
@@ -51,6 +51,10 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
+      - name: Setup Go
+        uses: actions/setup-go@v5.0.1
+        with:
+          go-version: '1.22'
       - name: Build WASM
         run: make wasm
       - name: Install Dependencies
