--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,10 +15,10 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5.3.0
         with:
-          go-version: '1.22'
+          go-version: '1.24'
       - uses: golangci/golangci-lint-action@v6
         with:
-          version: v1.54.1
+          version: v1.64.6
           args: "--timeout=5m --out-${NO_FUTURE}format colored-line-number"
 
   test:
@@ -27,7 +27,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5.3.0
         with:
-          go-version: '1.22'
+          go-version: '1.24'
       - run: go test -v ./...
 
   release-check:
@@ -36,10 +36,12 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - run: git fetch --force --tags
-      - uses: actions/setup-go@v5.1.0
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Setup Go
+        uses: actions/setup-go@v5.3.0
         with:
-          go-version: '1.22'
+          go-version: '1.24'
       - uses: goreleaser/goreleaser-action@v6
         with:
           distribution: goreleaser
@@ -54,7 +56,7 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v5.3.0
         with:
-          go-version: '1.22'
+          go-version: '1.24'
       - name: Build WASM
         run: make wasm
 
@@ -70,7 +72,7 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v5.3.0
         with:
-          go-version: '1.22'
+          go-version: '1.24'
       - name: Build WASM
         run: make wasm
       - name: Install Dependencies
