--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,15 +5,30 @@ updates:
     directory: "/"
     schedule:
       interval: "weekly"
+    cooldown:
+      default-days: 5
+    groups:
+      actions:
+        patterns:
+          - "*"
 
-  - package-ecosystem: "gomod"
+  - package-ecosystem: gomod
     directory: "/"
     schedule:
-      interval: "weekly"
-
-  - package-ecosystem: npm
-    directory: "/web/"
-    schedule:
       interval: weekly
-    open-pull-requests-limit: 10
-    versioning-strategy: increase-if-necessary
+    cooldown:
+      default-days: 5
+    groups:
+      major:
+        update-types:
+          - "major"
+      minor-patch:
+        update-types:
+          - "minor"
+          - "patch"
+      security:
+        applies-to: security-updates
+        update-types:
+          - "major"
+          - "minor"
+          - "patch"
